[gd_scene load_steps=2 format=3 uid="uid://f5q2m7k9p8n4"]

[ext_resource type="Script" path="res://scripts/ui/LevelComplete.gd" id="1_level_complete"]

[node name="LevelComplete" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_level_complete")

[node name="DimBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
text = "LEVEL COMPLETE!"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StarsContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Star1" type="Label" parent="CenterContainer/Panel/VBoxContainer/StarsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "★"

[node name="Star2" type="Label" parent="CenterContainer/Panel/VBoxContainer/StarsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "★"

[node name="Star3" type="Label" parent="CenterContainer/Panel/VBoxContainer/StarsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "★"

[node name="Spacer2" type="Control" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FoldsUsed" type="Label" parent="CenterContainer/Panel/VBoxContainer/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Folds Used: 5"
horizontal_alignment = 1

[node name="ParFolds" type="Label" parent="CenterContainer/Panel/VBoxContainer/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Par: 5"
horizontal_alignment = 1

[node name="Performance" type="Label" parent="CenterContainer/Panel/VBoxContainer/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
text = "Perfect!"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="NextButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Next Level"

[node name="RetryButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Retry"

[node name="LevelSelectButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Level Select"

[node name="MainMenuButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
